--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,11 @@
     <string name="app_name">sumRize</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_home_screen">HomeScreen</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_activity_home_screen">SumRize</string>
+    <string name="title_section1">Saved Summaries</string>
+    <string name="title_section2">Settings</string>
+    <string name="title_section3">App Info</string>
+    <string name="title_section4">Contact Us</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
@@ -15,5 +16,6 @@
     <string name="Paste_text">Paste Text....</string>
     <string name="Enter_URL_text">Enter URL..</string>
     <string name="OR_text">OR</string>
+
 
 </resources>
